DEV/src/objects/Resource_Request__c.object
<CustomObject>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Laptop_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Laptop required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percent_allocated__c</fullName>
        <label>Percent allocated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Hours__c</fullName>
        <label>Request Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Priority__c</fullName>
        <label>Request Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_bill_rate__c</fullName>
        <label>Request bill rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resource_Request_id__c</fullName>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Resource Request id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Resource_role__c</fullName>
        <label>Resource role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Summary__c</fullName>
        <label>Role Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>client_screening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>client screening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_change__c</fullName>
        <label>last change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open for Submitals</fullName>
                </value>
                <value>
                    <fullName>Closed for Submitals</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>work_city__c</fullName>
        <label>work city</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Wayne</fullName>
                </value>
                <value>
                    <fullName>New york</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>work_state__c</fullName>
        <label>work state</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AP</fullName>
                </value>
                <value>
                    <fullName>New york</fullName>
                </value>
                <value>
                    <fullName>TN</fullName>
                </value>
                <value>
                    <fullName>KA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Resource Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Resource Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>